# epub_download

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.vue  Config.vue  Search.vue  bindings.ts  components.d.ts  main.ts  router.ts
src-tauri/: Cargo.toml  build.rs  config.json  rustfmt.toml  tauri.conf.json
src-tauri/js/: chapterlog.js.v1006a8  chapterlog.js.v1006c1.3
src-tauri/src/: cli.rs  client.rs  command.rs  config.rs  downloader.rs  epub_builder.rs  error.rs  event.rs  lib.rs  main.rs  manage.rs  message.rs  model.rs  paragraph_restorer.rs  parse.rs  runtime.rs  secret.rs  utils.rs
src/components/: AutoCheckUpdate.vue
src/composables/: RunCommand.ts  event.ts  useNotification.ts  useRunCommand.ts
src/store/: global.ts
src/utils/: checkNotify.ts  event.ts
src/views/: Config.vue  Manage.vue  Search.vue  Web.vue
