[package]
name = "epub_download"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "epub_download"

[features]
default = ["gui"]
gui = ["tauri", "tauri-plugin-opener", "tauri-build"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "epub_download_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true}
tauri-plugin-opener = { version = "2", optional = true}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

specta = { version = "2.0.0-rc" }
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta-typescript = { version = "0.0.9" }

reqwest = {version = "0.12.9", features = ["blocking", "gzip", "deflate", "brotli", "zstd"] }
scraper = "0.22.0"
zip = "2.2.1"
tokio = "1.42.0"
regex = "1.11.1"
chrono = "0.4.39"
fast2s = "0.3.1"
image = "0.25.5"
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.98"
parking_lot = "0.12.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
