[package]
name = "epub_download"
version = "1.4.11"
description = "bilinovel downloader"
authors = ["kotorimiku"]
edition = "2024"
default-run = "epub_download"

[features]
default = ["gui"]
gui = [
  "tauri",
  "tauri-plugin-opener",
  "tauri-build",
  "specta",
  "specta-typescript",
  "tauri-specta",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "epub_download_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["devtools"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

specta = { version = "2.0.0-rc", optional = true }
tauri-specta = { version = "2.0.0-rc", features = [
  "derive",
  "typescript",
], optional = true }
specta-typescript = { version = "0.0.11", optional = true }

reqwest = { version = "0.13.2", default-features = false, features = [
  "gzip",
  "deflate",
  "brotli",
  "zstd",
  "json",
  "rustls"
] }
scraper = "0.26.0"
zip = "8.0.0"
tokio = { version = "1.42.0", features = ["full"] }
regex = "1.11.1"
chrono = { version = "0.4.39" }
fast2s = "0.3.1"
image = "0.25.5"
clap = { version = "4.5.23", features = ["derive"] }
parking_lot = "0.12.4"
semver = "1.0.26"
url = "2.5.7"
walkdir = "2.5.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }
color-eyre = "0.6.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Console"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
